reworked the index page with divs, removed mobile optimalization

--- a/css/recipe.css
+++ b/css/recipe.css
@@ -1,30 +1,20 @@
-* {
+body {
     background-color:azure;
     font-family: 'Courier New', Courier, monospace;
-}
+    width: 700px;
+    margin: 3vw auto;
+    }
 
 img {
+    display: block;
     width: 25em;
+    margin: auto;
 }    
 
+h1 {
+    text-align: center;
+}
 li {
     margin-bottom: 10px;
 }
 
-.recipe-wrap {
-    margin-top: 5vw;
-    width: 50vw;
-    margin-left: 10vw;
-    /* outline: solid 1px red; */
-   }
-
-@media (max-width: 1000px) {
-    .recipe-wrap {
-        width: 83vw;
-        margin-left: 7vw;
-    }
-
-    img {
-        width: 83vw;
-    }
-}
