--- a/css/index.css
+++ b/css/index.css
@@ -1,21 +1,43 @@
-* {
+body {
     background-color:azure;
     font-family: 'Courier New', Courier, monospace;
+    width: 800px;
+    margin: 3vw auto;
+    text-align: center;
 }
 
-li {
-    font-size: large;
-    padding-top: 10px;
+
+
+.recipe {
+    box-sizing: border-box;
+    margin: 20px auto;
+    border: 1px solid black;
+    width: 400px;
+    height: 200px;
+    text-align: center;
+    position: relative;
+    padding-top: 30px;
+    font-size: 20px;
+    font-weight: bold;
+    }        
+
+.link {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1;
 }
 
-.list-wrap {
-    margin-left: 10vw;
+#ama {
+    background-image: url(../img/amabg.png);
 }
 
-ul {
-    list-style-type:square;
+#car {
+    background-image: url(../img/carbg.png);
 }
 
-h1 {
-    margin-left: 10vw;
+#ris {
+    background-image: url(../img/risbg.png);
 }
